fixing bugs with viewing on small screens

--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -72,6 +72,11 @@ a:hover {
 }
 
 @media screen and (max-width: 768px) {
+
+  .conteiner {
+    height: 70px;
+  }
+
   .hamburger {
     position: absolute;
     right: 5%;
